# pytorrent

./: LICENSE  README.en.md  README.md  setup.cfg  test.py  test_.py  tmp1.json1  tmp1.json2  torrent.py
pytorrent/: download.py  logger.py  torrent.py  utils.py
testfile/: JUL-592.torrent  Sintel.torrent  debian-iso.torrent.info  debian-iso.torrent.status
tmp/: data.txt  tmp1  tmp1.json2  tmp1.json3
