[metadata]
name = pytorrent
version = 0.0.1
author = shadaileng
author_email = shadaileng@gmail.com
description = parse torrent file
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shadaileng/pytorrent
project_urls =
    Bug Tracker = https://github.com/shadaileng/pytorrent
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.8
packages = pytorrent
zip_safe = False
include_package_data = True
install_requires =
    aiohttp==3.9.1
    aiohttp-socks==0.8.4

[options.packages.find]
where = pytorrent

